==> theoim/ArduCAM_RP2040_C/ArduCAM/ArduCAM.c <==
#include "ArduCAM.h"
#include "hardware/i2c.h"
#include "hardware/spi.h"
#include "hardware/irq.h"
#include "pico/binary_info.h"
#include "ov2640_regs.h"
#include "ov5642_regs.h"

void ArduCAM_InitCAM(ArduCAM* cam) {
    switch (cam->sensor_model) {
        case OV2640:
            ArduCAM_wrSensorReg8_8(cam, 0xff, 0x01);
            ArduCAM_wrSensorReg8_8(cam, 0x12, 0x80);
            sleep_ms(100);
            if (cam->m_fmt == JPEG) {
                ArduCAM_wrSensorRegs8_8(cam, OV2640_JPEG_INIT);
                ArduCAM_wrSensorRegs8_8(cam, OV2640_YUV422);
                ArduCAM_wrSensorRegs8_8(cam, OV2640_JPEG);
                ArduCAM_wrSensorReg8_8(cam, 0xff, 0x01);
                ArduCAM_wrSensorReg8_8(cam, 0x15, 0x00);
                ArduCAM_wrSensorRegs8_8(cam, OV2640_320x240_JPEG);
            } else {
                ArduCAM_wrSensorRegs8_8(cam, OV2640_QVGA);
            }
            break;
        case OV5642:
            ArduCAM_wrSensorReg16_8(cam, 0x3008, 0x80);
            if (cam->m_fmt == RAW) {
                ArduCAM_wrSensorRegs16_8(cam, OV5642_1280x960_RAW);
                ArduCAM_wrSensorRegs16_8(cam, OV5642_640x480_RAW);
            } else {
                ArduCAM_wrSensorRegs16_8(cam, OV5642_QVGA_Preview);
                sleep_ms(100);
                if (cam->m_fmt == JPEG) {
                    sleep_ms(100);
                    ArduCAM_wrSensorRegs16_8(cam, OV5642_JPEG_Capture_QSXGA);
                    ArduCAM_wrSensorRegs16_8(cam, ov5642_320x240);
                    sleep_ms(100);
                    ArduCAM_wrSensorReg16_8(cam, 0x3818, 0xa8);
                    ArduCAM_wrSensorReg16_8(cam, 0x3621, 0x10);
                    ArduCAM_wrSensorReg16_8(cam, 0x3801, 0xb0);
                    ArduCAM_wrSensorReg16_8(cam, 0x4407, 0x04);
                } else {
                    byte reg_val;
                    ArduCAM_wrSensorReg16_8(cam, 0x4740, 0x21);
                    ArduCAM_wrSensorReg16_8(cam, 0x501e, 0x2a);
                    ArduCAM_wrSensorReg16_8(cam, 0x5002, 0xf8);
                    ArduCAM_wrSensorReg16_8(cam, 0x501f, 0x01);
                    ArduCAM_wrSensorReg16_8(cam, 0x4300, 0x61);
                    ArduCAM_rdSensorReg16_8(cam, 0x3818, &reg_val);
                    ArduCAM_wrSensorReg16_8(cam, 0x3818, (reg_val | 0x60) & 0xff);
                    ArduCAM_rdSensorReg16_8(cam, 0x3621, &reg_val);
                    ArduCAM_wrSensorReg16_8(cam, 0x3621, reg_val & 0xdf);
                }
            }
            break;
        default:
            break;
    }
}

void ArduCAM_flush_fifo(ArduCAM* cam) {
    ArduCAM_write_reg(cam, ARDUCHIP_FIFO, FIFO_CLEAR_MASK);
}

void ArduCAM_start_capture(ArduCAM* cam) {
    ArduCAM_write_reg(cam, ARDUCHIP_FIFO, FIFO_START_MASK);
}

void ArduCAM_clear_fifo_flag(ArduCAM* cam) {
    ArduCAM_write_reg(cam, ARDUCHIP_FIFO, FIFO_CLEAR_MASK);
}

uint8_t ArduCAM_read_fifo(ArduCAM* cam) {
    return ArduCAM_bus_read(cam, SINGLE_FIFO_READ);
}

uint8_t ArduCAM_read_reg(ArduCAM* cam, uint8_t addr) {
    uint8_t value = 0;
    addr &= 0x7f;  // Mask to ensure MSB is 0 for a read operation
    cbi(cam->P_CS, cam->B_CS);
    int sent = spi_write_blocking(SPI_PORT, &addr, 1);
    int received = spi_read_blocking(SPI_PORT, 0, &value, 1);
    sbi(cam->P_CS, cam->B_CS);
    
    printf("read Sent %d bytes (Addr: 0x%02X)\n", sent, addr);
    printf("read Received %d bytes (Value: 0x%02X)\n", received, value);

    return value;
}

void ArduCAM_write_reg(ArduCAM* cam, uint8_t addr, uint8_t data) {
    uint8_t buf[2] = { addr | WRITE_BIT, data };  // Set MSB for write operation
    cbi(cam->P_CS, cam->B_CS);
    int sent = spi_write_blocking(SPI_PORT, buf, 2);
    sbi(cam->P_CS, cam->B_CS);
    sleep_ms(1);  // Short delay after writing

    printf("Write Sent %d bytes (Addr: 0x%02X, Data: 0x%02X)\n", sent, addr, data);
}

uint32_t ArduCAM_read_fifo_length(ArduCAM* cam) {
    uint32_t len1 = 0;
    uint32_t len2 = 0;
    uint32_t len3 = 0;
    uint32_t length = 0;

    len1 = ArduCAM_read_reg(cam ,FIFO_SIZE1);
    len2 = ArduCAM_read_reg(cam ,FIFO_SIZE2);
    len3 = ArduCAM_read_reg(cam ,FIFO_SIZE3) & 0x7f;
    length = ((len3 << 16) | (len2 << 8) | len1) & 0x07fffff;
    return length;
}

void ArduCAM_set_fifo_burst(ArduCAM* cam) {
    uint8_t value;
    spi_read_blocking(SPI_PORT, BURST_FIFO_READ, &value, 1);
}

void ArduCAM_set_bit(ArduCAM* cam, uint8_t addr, uint8_t bit) {
    uint8_t temp = ArduCAM_read_reg(cam, addr);
    ArduCAM_write_reg(cam, addr, temp | bit);
}

void ArduCAM_clear_bit(ArduCAM* cam, uint8_t addr, uint8_t bit) {
    uint8_t temp = ArduCAM_read_reg(cam, addr);
    ArduCAM_write_reg(cam, addr, temp & (~bit));
}

uint8_t ArduCAM_get_bit(ArduCAM* cam, uint8_t addr, uint8_t bit) {
    return ArduCAM_read_reg(cam, addr) & bit;
}

int ArduCAM_wrSensorRegs8_8(ArduCAM* cam, const struct sensor_reg reglist[]) {
    int err = 0;
    const struct sensor_reg *next = reglist;
    while ((next->reg != 0xff) || (next->val != 0xff)) {
        err = ArduCAM_wrSensorReg8_8(cam, next->reg, next->val);
        next++;
    }
    return err;
}

int ArduCAM_wrSensorRegs8_16(ArduCAM* cam, const struct sensor_reg reglist[]) {
    int err = 0;
    const struct sensor_reg *next = reglist;
    while ((next->reg != 0xff) || (next->val != 0xffff)) {
        err = ArduCAM_wrSensorReg8_16(cam, next->reg, next->val);
        next++;
    }
    return err;
}

int ArduCAM_wrSensorRegs16_8(ArduCAM* cam, const struct sensor_reg reglist[]) {
    int err = 0;
    const struct sensor_reg *next = reglist;
    while ((next->reg != 0xffff) || (next->val != 0xff)) {
        err = ArduCAM_wrSensorReg16_8(cam, next->reg, next->val);
        next++;
    }
    return err;
}

byte ArduCAM_wrSensorReg8_8(ArduCAM* cam, int regID, int regDat) {
    uint8_t buf[2] = { regID, regDat };
    i2c_write_blocking(I2C_PORT, cam->sensor_addr, buf, 2, true);
    return 1;
}

byte ArduCAM_rdSensorReg8_8(ArduCAM* cam, uint8_t regID, uint8_t* regDat) {
    i2c_write_blocking(I2C_PORT, cam->sensor_addr, &regID, 1, true);
    i2c_read_blocking(I2C_PORT, cam->sensor_addr, regDat, 1, false);
    return 1;
}

byte ArduCAM_wrSensorReg16_8(ArduCAM* cam, int regID, int regDat) {
    uint8_t buf[3] = { (regID >> 8) & 0xff, regID & 0xff, regDat };
    i2c_write_blocking(I2C_PORT, cam->sensor_addr, buf, 3, true);
    sleep_ms(2);
    return 1;
}

byte ArduCAM_rdSensorReg16_8(ArduCAM* cam, uint16_t regID, uint8_t* regDat) {
    uint8_t buffer[2] = { (regID >> 8) & 0xff, regID & 0xff };
    i2c_write_blocking(I2C_PORT, cam->sensor_addr, buffer, 2, true);
    i2c_read_blocking(I2C_PORT, cam->sensor_addr, regDat, 1, false);
    return 1;
}

void ArduCAM_OV2640_set_JPEG_size(ArduCAM* cam, uint8_t size) {
    switch(size) {
        case OV2640_160x120:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_160x120_JPEG);
            break;
        case OV2640_176x144:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_176x144_JPEG);
            break;
        case OV2640_320x240:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_320x240_JPEG);
            break;
        case OV2640_352x288:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_352x288_JPEG);
            break;
        case OV2640_640x480:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_640x480_JPEG);
            break;
        case OV2640_800x600:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_800x600_JPEG);
            break;
        case OV2640_1024x768:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_1024x768_JPEG);
            break;
        case OV2640_1280x1024:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_1280x1024_JPEG);
            break;
        case OV2640_1600x1200:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_1600x1200_JPEG);
            break;
        default:
            ArduCAM_wrSensorRegs8_8(cam, OV2640_320x240_JPEG);
            break;
    }
}

void ArduCAM_init(void) {
    // I2C 초기화
    i2c_init(I2C_PORT, 100 * 1000);
    gpio_set_function(PIN_SDA, GPIO_FUNC_I2C);
    gpio_set_function(PIN_SCL, GPIO_FUNC_I2C);
    gpio_pull_up(PIN_SDA);
    gpio_pull_up(PIN_SCL);
    bi_decl(bi_2pins_with_func(PIN_SDA, PIN_SCL, GPIO_FUNC_I2C));

    // SPI 초기화
    spi_init(SPI_PORT, 4 * 1000 * 1000);
    gpio_set_function(PIN_MISO, GPIO_FUNC_SPI);
    gpio_set_function(PIN_SCK, GPIO_FUNC_SPI);
    gpio_set_function(PIN_MOSI, GPIO_FUNC_SPI);
    // make the SPI pins available to picotool
    bi_decl(bi_3pins_with_func(PIN_MISO, PIN_MOSI, PIN_SCK, GPIO_FUNC_SPI));
}
