==> NordicPlayground/nrf52-ble-image-transfer-demo/arducam_mini_2mp/ArduCAM.c <==
#include "ArduCAM.h"
#include "nrf_delay.h"
#include "nrf_gpio.h"
#define SPI_INSTANCE  0 /**< SPI instance index. */
#define TWIM_INSTANCE 1

void arducam_set_bit(uint8_t addr, uint8_t bit)
{
  uint8_t temp;
  temp = arducam_read_reg(addr);
  arducam_write_reg(addr, temp | bit);
}

void arducam_clear_bit(uint8_t addr, uint8_t bit)
{
  uint8_t temp;
  temp = arducam_read_reg(addr);
  arducam_write_reg(addr, temp & (~bit));
}

uint8_t arducam_get_bit(uint8_t addr, uint8_t bit)
{
  uint8_t temp;
  temp = arducam_read_reg(addr);
  temp = temp & bit;
  return temp;
}

void arducam_write_reg(uint8_t addr, uint8_t data)
{
  arducam_bus_write(addr | 0x80, data);
}

uint8_t arducam_read_reg(uint8_t addr)
{
  uint8_t data;
  data = arducam_bus_read(addr & 0x7F);
  return data;
}

void arducam_init(uint8_t model, uint32_t scl, uint32_t sda, uint32_t csn, uint32_t mosi, uint32_t miso, uint32_t sck)
{ 
    pinScl = scl;
    pinSda = sda;
    pinCsn = csn;
    pinMosi = mosi;
    pinMiso = miso;
    pinSck = sck;    
    arducam_spiTwiInit();
    sensor_model = model;
    switch (sensor_model)
    {
        case OV2640:
            sensor_addr = 0x60 >> 1;
            break;
        default:
            sensor_addr = 0x42;
            break;
    }
}

void arducam_flush_fifo(void)
{
  arducam_write_reg(ARDUCHIP_FIFO, FIFO_CLEAR_MASK);
}

void arducam_start_capture(void)
{
  arducam_write_reg(ARDUCHIP_FIFO, FIFO_START_MASK);
}

void arducam_clear_fifo_flag(void)
{
  arducam_write_reg(ARDUCHIP_FIFO, FIFO_CLEAR_MASK);
}

uint8_t arducam_read_fifo(void)
{
  uint8_t data;
  data = arducam_bus_read(SINGLE_FIFO_READ);
  return data;
}

uint32_t arducam_read_fifo_length(void)
{
  uint32_t len1, len2, len3, length = 0;
  len1 = arducam_read_reg(FIFO_SIZE1);
  len2 = arducam_read_reg(FIFO_SIZE2);
  len3 = arducam_read_reg(FIFO_SIZE3) & 0x7f;
  length = ((len3 << 16) | (len2 << 8) | len1) & 0x07fffff;
  return length;
}

void arducam_set_fifo_burst()
{
    uint8_t cmd = BURST_FIFO_READ;
    arducam_spiWrite(cmd);
}

uint8_t arducam_wrSensorReg8_8(int regID, int regDat)
{
    static uint8_t twiBuf[2];
    twiBuf[0] = regID & 0x00FF;
    twiBuf[1] = regDat & 0x00FF;
    arducam_twi_tx_rx(twiBuf, 2, 0, 0);
    while(twim_busy);
    nrf_delay_ms(1);
    return (1);
}

uint8_t arducam_rdSensorReg8_8(uint8_t regID, uint8_t* regDat)
{
    arducam_twi_tx_rx(&regID, 1, regDat, 1);
    while(twim_busy);
    nrf_delay_ms(1);
    return (1);
}

uint8_t arducam_wrSensorReg16_8(int regID, int regDat)
{
    uint8_t txBuf[3] = {regID >> 8, regID & 0x00FF, regDat & 0x00FF};
    arducam_twi_tx_rx(txBuf, 3, 0, 0);
    while(twim_busy);    
    nrf_delay_ms(1);
    return (1);
}

uint8_t arducam_rdSensorReg16_8(uint16_t regID, uint8_t* regDat)
{
    uint8_t txBuf[2] = {regID >> 8, regID & 0x00FF};
    arducam_twi_tx_rx(txBuf, 2, regDat, 1);
    while(twim_busy); 
    nrf_delay_ms(1);
    return (1);
}

int arducam_wrSensorRegs8_8(const struct sensor_reg reglist[])
{
  uint16_t reg_addr = 0;
  uint16_t reg_val = 0;
  const struct sensor_reg *next = reglist;
  while ((reg_addr != 0xff) | (reg_val != 0xff))
  {
    reg_addr = pgm_read_word(&next->reg);
    reg_val = pgm_read_word(&next->val);
    arducam_wrSensorReg8_8(reg_addr, reg_val);
    next++;
#if defined(ESP8266)
    yield();
#endif
  }

  return 1;
}

int arducam_wrSensorRegs8_16(const struct sensor_reg reglist[])
{
  unsigned int reg_addr =0, reg_val = 0;
  const struct sensor_reg *next = reglist;

  while ((reg_addr != 0xff) | (reg_val != 0xffff))
  {
    reg_addr = pgm_read_word(&next->reg);
    reg_val = pgm_read_word(&next->val);
    arducam_wrSensorReg8_16(reg_addr, reg_val);
    //  if (!err)
    //return err;
    next++;
#if defined(ESP8266)
    yield();
#endif
  }

  return 1;
}

int arducam_wrSensorRegs16_8(const struct sensor_reg reglist[])
{
  unsigned int reg_addr = 0;
  unsigned char reg_val = 0;
  const struct sensor_reg *next = reglist;

  while ((reg_addr != 0xffff) | (reg_val != 0xff))
  {
    reg_addr = pgm_read_word(&next->reg);
    reg_val = pgm_read_word(&next->val);
    arducam_wrSensorReg16_8(reg_addr, reg_val);
    //if (!err)
    //return err;
    next++;
#if defined(ESP8266)
    yield();
#endif
  }

  return 1;
}

void arducam_OV2640_set_JPEG_size(uint8_t size)
{

  #if (defined (OV2640_CAM)||defined (OV2640_MINI_2MP))
  switch (size)
  {  
    case OV2640_160x120:
      arducam_wrSensorRegs8_8(OV2640_160x120_JPEG);
      break;
    case OV2640_176x144:
      arducam_wrSensorRegs8_8(OV2640_176x144_JPEG);
      break;
    case OV2640_320x240:
      arducam_wrSensorRegs8_8(OV2640_320x240_JPEG);
      break;
    case OV2640_352x288:
      arducam_wrSensorRegs8_8(OV2640_352x288_JPEG);
      break;
    case OV2640_640x480:
      arducam_wrSensorRegs8_8(OV2640_640x480_JPEG);
      break;
    case OV2640_800x600:
      arducam_wrSensorRegs8_8(OV2640_800x600_JPEG);
      break;
    case OV2640_1024x768:
      arducam_wrSensorRegs8_8(OV2640_1024x768_JPEG);
      break;
    case OV2640_1280x1024:
      arducam_wrSensorRegs8_8(OV2640_1280x1024_JPEG);
      break;
    case OV2640_1600x1200:
      arducam_wrSensorRegs8_8(OV2640_1600x1200_JPEG);
      break;
    default:
      arducam_wrSensorRegs8_8(OV2640_320x240_JPEG);
      break;
  }
#endif
}

void arducam_InitCAM()
{
#if !(defined(__CPU_ARC__))
 #endif
  switch (sensor_model)
  {
    case OV2640:
      {
#if (defined(OV2640_CAM) || defined(OV2640_MINI_2MP))
        arducam_wrSensorReg8_8(0xff, 0x01);
        arducam_wrSensorReg8_8(0x12, 0x80);
        nrf_delay_ms(100);
        if (m_fmt == JPEG)
        {
          arducam_wrSensorRegs8_8(OV2640_JPEG_INIT);
          arducam_wrSensorRegs8_8(OV2640_YUV422);
          arducam_wrSensorRegs8_8(OV2640_JPEG);
          arducam_wrSensorReg8_8(0xff, 0x01);
          arducam_wrSensorReg8_8(0x15, 0x00);
          arducam_wrSensorRegs8_8(OV2640_320x240_JPEG);
          //wrSensorReg8_8(0xff, 0x00);
          //wrSensorReg8_8(0x44, 0x32);
        }
        else
        {
          arducam_wrSensorRegs8_8(OV2640_QVGA);
        }
#endif
        break;
      }
    default:

      break;
  }
}
